Ingress/ingress-resource.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-resource
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: pythonrestapi.myonlineapplication.work.gd
      http:
        paths:
          - path: /hello
            pathType: Prefix
            backend:
              service:
                name: pythonrestapi-pythonproject
                port:
                  number: 9001
  tls:
    - hosts:
        - pythonrestapi.myonlineapplication.work.gd
      secretName: haaruu-secrets
